--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      oooOkienko nr 1
+      oooOkienko n hr 1
     </ion-title>
   </ion-toolbar>
 </ion-header> 
