--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      oooOkienko n hr 1 tall?
+      oooOkienko n hr 1 tall? okk ADD
     </ion-title>
   </ion-toolbar>
 </ion-header> 
@@ -14,7 +14,7 @@
         <ion-card-title>Welcome to Ionic</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>To twoja pierwsza appka</p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
