--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -35,7 +35,7 @@
       </ion-item>
       <ion-item href="https://beta.ionicframework.com/docs/theming/basics">
         <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
+        <ion-label>Czyżby?</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
