--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,7 +19,7 @@
     </ion-card>
     <ion-list lines="none">
       <ion-list-header>
-        <ion-label>Zasoby</ion-label>
+        <ion-label>Zasobyyyyyyyyyyyyyyyyyyy</ion-label>
       </ion-list-header>
       <ion-item href="https://beta.ionicframework.com/docs/">
         <ion-icon slot="start" color="medium" name="book"></ion-icon>
